# command-departure-emg-benchmark

./: .gitignore  CHECKSUMS_SHA256.txt  LICENSE  NO_RAW_DATA.md  README.md  README_REPRODUCTION.md  pyproject.toml  requirements.txt  run_all.sh
config/: command_departure_suite.yaml  datasets.yaml  datasets_command_departure.yaml  experiment.yaml  experiment_gpu.yaml
docs/: RELEASE_AUDIT.md
outputs/manifests/: dataset_provenance.csv  release_verification.json
outputs/tables/: dataset_audit_table.tex  dataset_inference_boundary_table.tex  db10_context_control_table.tex  db10_extended_risk_boundary_audit_table.tex  db10_policy_sensitivity_table.tex  db10_primary_table.tex  db10_risk_boundary_summary_table.tex  db10_user_decoder_classical_table.tex  exact_budget_summary_table.tex  external_table.tex  setacsa_pairwise_table.tex
results/db10_context_control_audit/: T_db10_context_control_table.tex  context_control_fold_metrics.csv  context_control_manifest.json  context_control_subject_metrics.csv  context_control_summary.csv
results/db10_risk_boundary_audit_20260512/: T_db10_policy_sensitivity_table.tex  T_db10_risk_boundary_table.tex  db10_audit_warnings.csv  db10_risk_boundary_calibration_metrics.csv  db10_risk_boundary_class_metrics.csv  db10_risk_boundary_fold_metrics.csv  db10_risk_boundary_pareto_nondominated_points.csv  db10_risk_boundary_pareto_summary.csv  db10_risk_boundary_policy_metrics.csv  db10_risk_boundary_policy_summary.csv  db10_risk_boundary_subject_metrics.csv  db10_risk_boundary_summary.csv
scripts/: verify_release.py
(+49 files in other folders)
