[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "command-departure-emg-benchmark"
version = "0.1.0"
description = "Reproduction package for command-departure policy evaluation in myoelectric shared autonomy"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
